[package]
name = "example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
leptos = { rev = "6547fcdfb2913e4a07b877747b195cde1a323eab", git = "https://github.com/xrpl-mm/leptos", default-features = false }
leptos-cf = { path = "../leptos-cf", optional = true }
leptos_dom = { rev = "6547fcdfb2913e4a07b877747b195cde1a323eab", git = "https://github.com/xrpl-mm/leptos", default-features = false }
leptos_router = { rev = "6547fcdfb2913e4a07b877747b195cde1a323eab", git = "https://github.com/xrpl-mm/leptos", default-features = false }
leptos_meta = { rev = "6547fcdfb2913e4a07b877747b195cde1a323eab", git = "https://github.com/xrpl-mm/leptos", default-features = false }
lazy_static = "1.4.0"
log = "0.4.20"
serde = "1.0.189"
thiserror = "1.0.49"
wasm-bindgen = "0.2.84"
worker = { rev = "00def197b6be6cb43604c7de1fc58523e95b6c84", git = "https://github.com/xrpl-mm/workers-rs" }
web-sys = "0.3.61"

[features]
default = ["hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_dom/ssr",
  "dep:leptos-cf"
]
hydrate = [
  "leptos/hydrate", 
  "leptos_meta/hydrate", 
  "leptos_router/hydrate",
  "leptos_dom/hydrate"
]
