[package]
edition = "2021"
name = "example"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = {version = "0.1.7", optional = true}
console_log = "1.0.0"
lazy_static = "1.4.0"
leptos = {version = "0.5.6", default-features = false}
leptos-cloudflare = {path = "../leptos-cloudflare", optional = true}
leptos_dom = {version = "0.5.6", default-features = false}
leptos_meta = {version = "0.5.6", default-features = false}
leptos_router = {version = "0.5.6", default-features = false}
log = "0.4.20"
serde = "1.0.189"
thiserror = "1.0.49"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
worker = {version = "0.0.18"}

[features]
console_error_panic_hook = ["dep:console_error_panic_hook"]
default = ["hydrate"]
hydrate = [
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
  "leptos_dom/hydrate",
  'dep:console_error_panic_hook',
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos_dom/ssr",
  "dep:leptos-cloudflare",
]
