[package]
name = "leptos-cf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
leptos = { rev = "6547fcdfb2913e4a07b877747b195cde1a323eab", git = "https://github.com/xrpl-mm/leptos", default-features = false, features = ["ssr"] }
leptos_router = { rev = "6547fcdfb2913e4a07b877747b195cde1a323eab", git = "https://github.com/xrpl-mm/leptos", default-features = false, features = ["ssr"] }
leptos_meta = { rev = "6547fcdfb2913e4a07b877747b195cde1a323eab", git = "https://github.com/xrpl-mm/leptos", default-features = false, features = ["ssr"] }
leptos_reactive = { git = "https://github.com/xrpl-mm/leptos.git", rev = "6547fcdfb2913e4a07b877747b195cde1a323eab", default-features = false, features = ["ssr"] }
leptos_integration_utils = { git = "https://github.com/xrpl-mm/leptos.git", rev = "6547fcdfb2913e4a07b877747b195cde1a323eab" }
mime_guess = "2.0.4"
tracing = "0.1.39"
wasm-bindgen = "0.2.86"
web-sys = "0.3.63"
worker = { rev = "3883bf7d5cb599a21b7c279607c29e307bb4ba2e", git = "https://github.com/xrpl-mm/workers-rs" }

[features]
nonce = ["leptos/nonce"]
