[package]
edition = "2021"
name = "leptos-cloudflare"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
leptos = {version = "0.5.6", default-features = false, features = ["ssr"]}
leptos_integration_utils = {version = "0.5.6"}
leptos_meta = {version = "0.5.6", default-features = false, features = ["ssr"]}
leptos_reactive = {version = "0.5.6", default-features = false, features = ["ssr"]}
leptos_router = {version = "0.5.6", default-features = false, features = ["ssr"]}
mime_guess = "2.0.4"
tracing = "0.1.39"
wasm-bindgen = "0.2.86"
web-sys = "0.3.63"
worker = {version = "0.0.18"}

[features]
nonce = ["leptos/nonce"]
