[package]
name = "worker"
version = "0.0.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
worker = "0.0.18"
leptos = { version = "0.4.9", default-features = false, features = ["ssr"]}
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0.0"
futures = "0.3.28"
app = { path = "../app", default-features = false, features = ["ssr"] }
cfg-if = "1.0.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
